# MGraph-AI__Service__Semantic_Text

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__main.yml
.template/: VERSION
docs/: README.md
docs/business-debriefs/: v0.5.15__explainable-content-transformation__phase-2-multi-criteria-filtering.md  v0.5.17__explainable-content-classification__phase-2.5-deterministic-intelligence.md  v0.5.20__business-update-phase__2-6__service-modernization-and-architecture-simplification.md .md
docs/dev-briefs/: v0.5.10__review-of-semantic-text-refactoring.md  v0.5.10__semantic-text-mode-specific-endpoints-brief.md  v0.5.12__cache_decorator_system.md  v0.5.2__semantic-text-refactoring-brief.md  v0_6_8__semantic-text-service__client-api-guide.md
docs/dev/setup/: compete-guide-to-setup-new-repo.md  repo-setup-guide.md
docs/llm-briefs/: v3.1.1__osbot-utils__type-safe__and__python-formatting__guidance.md
mgraph_ai_service_semantic_text/: __init__.py  config.py
mgraph_ai_service_semantic_text/fast_api/: Semantic_Text__Service__Fast_API.py  Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_semantic_text/schemas/: Schema__Semantic_Text__Classification.py
mgraph_ai_service_semantic_text/utils/: Version.py
scripts/: release-script-v1.0.0.sh  run-locally.sh  setup-new-service-from-bare-github-repo.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
tests/unit/: Semantic_Text__Service__Fast_API__Test_Objs.py  Service__Fast_API__Test_Objs.py  test_config.py
(+133 files in other folders)
