[tool.poetry]
name        = "mgraph_ai_service_semantic_text"
version     = "v0.5.14"
description = "MGraph-AI__Service__Semantic_Text"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Semantic_Text"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Semantic_Text"

[tool.poetry.dependencies]
python                         = "^3.12"
osbot-fast-api-serverless      = "*"
mgraph-ai-service-cache-client = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"